--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/bopjesvla/als7#readme",
   "dependencies": {
+    "handlebars": "^4.0.5",
     "metalsmith": "^2.1.0",
     "metalsmith-collections": "^0.7.0",
     "metalsmith-drafts": "0.0.1",
@@ -25,6 +26,7 @@
     "metalsmith-loader": "^0.1.1",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.5.0",
+    "metalsmith-register-helpers": "^0.1.2",
     "metalsmith-serve": "0.0.7",
     "metalsmith-watch": "^1.0.1"
   }
