--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "jade": "^1.11.0",
     "lodash": "^4.6.1",
     "metalsmith": "^2.1.0",
+    "metalsmith-alias": "0.0.2",
+    "metalsmith-assets": "^0.1.0",
     "metalsmith-branch": "0.0.4",
     "metalsmith-collections": "^0.7.0",
     "metalsmith-default-values": "0.0.2",
@@ -41,6 +43,7 @@
     "metalsmith-pagination": "^1.4.0",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-simplewatch": "herrkris/metalsmith-simplewatch",
+    "metalsmith-sitemap": "^1.0.0",
     "metalsmith-stylus": "^2.0.0",
     "metalsmith-tags": "^1.2.1",
     "metalsmith-uncss": "^0.2.0",
